--- a/fulldeployment/.github/workflows/aws.yml
+++ b/fulldeployment/.github/workflows/aws.yml
@@ -3,15 +3,15 @@ run-name: Create Env and Run Deployment via TF and CF
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
   workflow_dispatch: 
 env:
   AWS_REGION: ap-southeast-2
   PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-  HOSTNAME: ${{ secrets.SSH_HOST }}
-  USER_NAME: ${{ secrets.SSH_USER_NAME }}
+  #HOSTNAME: ${{ secrets.SSH_HOST }}
+  #USER_NAME: ${{ secrets.SSH_USER_NAME }}
   FORCE_COLOR: true 
 
 permissions:
