--- a/fulldeployment/.github/workflows/aws.yml
+++ b/fulldeployment/.github/workflows/aws.yml
@@ -10,8 +10,8 @@ on:
 env:
   AWS_REGION: ap-southeast-2
   PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-  #HOSTNAME: ${{ secrets.SSH_HOST }}
-  #USER_NAME: ${{ secrets.SSH_USER_NAME }}
+  HOSTNAME: ${{ secrets.SSH_HOST }}
+  USER_NAME: ${{ secrets.SSH_USER_NAME }}
   FORCE_COLOR: true 
 
 permissions:
