--- a/fulldeployment/.github/workflows/aws.yml
+++ b/fulldeployment/.github/workflows/aws.yml
@@ -3,8 +3,7 @@ run-name: Create Env and Run Deployment via TF and CF
 
 on:
   push:
-    branches: 
-    - main
+    branches: [ "feature-ec2" ]
   #pull_request:
   #  branches: [ "main" ]
   workflow_dispatch: 
