--- a/fulldeployment/.github/workflows/aws.yml
+++ b/fulldeployment/.github/workflows/aws.yml
@@ -4,8 +4,8 @@ run-name: Create Env and Run Deployment via TF and CF
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  #pull_request:
+   # branches: [ "main" ]
   workflow_dispatch: 
 env:
   AWS_REGION: ap-southeast-2
